--- a/samples/AspNetAngularSpaYarp/AspNetAngularSpaYarp.csproj
+++ b/samples/AspNetAngularSpaYarp/AspNetAngularSpaYarp.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <ImplicitUsings>enable</ImplicitUsings>
+	<!-- SpaYarp configuration -->
     <SpaRoot>ClientApp\</SpaRoot>
     <SpaClientUrl>https://localhost:44478</SpaClientUrl>
     <SpaLaunchCommand>npm start</SpaLaunchCommand>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
